fixing misalignment ugliness with affiliate names and images

--- a/dbgroup.css
+++ b/dbgroup.css
@@ -125,8 +125,8 @@ img#berkeleylogo {
 }
 
 .affiliated-faculty-headshot-box {
-  height: 100px;
-  width: 80px;
+  height: 130px;
+  width: 104px;
 }
 
 .covered-image {
